@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2002/11/28 07:12:09 schmonz Exp $
+# $NetBSD: Makefile,v 1.2 2002/11/28 07:42:05 jlam Exp $
 #
 
 DISTNAME=	pdksh-5.2.14
+PKGREVISION=	1
 CATEGORIES=	shells
 MASTER_SITES=	ftp://ftp.cs.mun.ca/pub/pdksh/
 
@@ -9,10 +10,15 @@ MAINTAINER=	schmonz@netbsd.org
 HOMEPAGE=	http://web.cs.mun.ca/~michael/pdksh/
 COMMENT=	Free clone of the AT&T Korn shell
 
-USE_BUILDLINK2=	YES
-GNU_CONFIGURE=	YES
+# pdksh is needed to bootstrap buildlink2 on some systems.
+USE_BUILDLINK2=	no
 
-PKG_SHELL=	${PREFIX}/bin/ksh
+GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--program-prefix=pd
+
+PKG_SHELL=	${PREFIX}/bin/pdksh
 
 .include "../../mk/bsd.pkg.install.mk"
 .include "../../mk/bsd.pkg.mk"
+
+LDFLAGS=	# empty
